k3s/generated_manifests/hyperdx/Deployment-hyperdx-hdx-oss-v2-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hyperdx-hdx-oss-v2
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hdx-oss-v2
    app.kubernetes.io/version: 2.6.0
    helm.sh/chart: hdx-oss-v2-0.7.3
  name: hyperdx-hdx-oss-v2-app
  namespace: hyperdx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperdx-hdx-oss-v2
      app.kubernetes.io/instance: hyperdx
      app.kubernetes.io/name: hdx-oss-v2
  template:
    metadata:
      labels:
        app: hyperdx-hdx-oss-v2
        app.kubernetes.io/instance: hyperdx
        app.kubernetes.io/name: hdx-oss-v2
    spec:
      containers:
        - env:
            - name: HYPERDX_API_KEY
              valueFrom:
                secretKeyRef:
                  key: api-key
                  name: hyperdx-hdx-oss-v2-app-secrets
            - name: DEFAULT_CONNECTIONS
              value: |
                [
                  {
                    "name": "Local ClickHouse",
                    "host": "http://hyperdx-hdx-oss-v2-clickhouse:8123",
                    "port": 8123,
                    "username": "app",
                    "password": "hyperdx"
                  }
                ]
            - name: DEFAULT_SOURCES
              value: |
                [...]
          image: docker.hyperdx.io/hyperdx/hyperdx:2.6.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          name: app
          ports:
            - containerPort: 3000
              name: app-port
            - containerPort: 8000
              name: api-port
            - containerPort: 4320
              name: opamp-port
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 5
