k3s/generated_manifests/hyperdx/Deployment-hyperdx-hdx-oss-v2-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hdx-oss-v2
    app.kubernetes.io/version: 2.6.0
    helm.sh/chart: hdx-oss-v2-0.7.3
  name: hyperdx-hdx-oss-v2-mongodb
  namespace: hyperdx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      app.kubernetes.io/instance: hyperdx
      app.kubernetes.io/name: hdx-oss-v2
  template:
    metadata:
      labels:
        app: mongodb
        app.kubernetes.io/instance: hyperdx
        app.kubernetes.io/name: hdx-oss-v2
    spec:
      containers:
        - image: mongo:5.0.14-focal
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            tcpSocket:
              port: 27017
            timeoutSeconds: 5
          name: mongodb
          ports:
            - containerPort: 27017
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 1
            periodSeconds: 10
            tcpSocket:
              port: 27017
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: hyperdx-hdx-oss-v2-mongodb
