k3s/generated_manifests/hyperdx/Service-hyperdx-hdx-oss-v2-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hdx-oss-v2
    app.kubernetes.io/version: 2.6.0
    helm.sh/chart: hdx-oss-v2-0.7.3
  name: hyperdx-hdx-oss-v2-app
  namespace: hyperdx
spec:
  ports:
    - name: app
      port: 3000
      targetPort: 3000
    - name: opamp
      port: 4320
      targetPort: 4320
  selector:
    app: hyperdx-hdx-oss-v2
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/name: hdx-oss-v2
  type: ClusterIP
