k3s/generated_manifests/hyperdx/Service-hyperdx-hdx-oss-v2-clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hdx-oss-v2
    app.kubernetes.io/version: 2.6.0
    helm.sh/chart: hdx-oss-v2-0.7.3
  name: hyperdx-hdx-oss-v2-clickhouse
  namespace: hyperdx
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: native
      port: 9000
      targetPort: 9000
    - name: prometheus
      port: 9363
      targetPort: 9363
  selector:
    app: clickhouse
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/name: hdx-oss-v2
  type: ClusterIP
