k3s/generated_manifests/hyperdx/Service-hyperdx-hdx-oss-v2-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hdx-oss-v2
    app.kubernetes.io/version: 2.6.0
    helm.sh/chart: hdx-oss-v2-0.7.3
  name: hyperdx-hdx-oss-v2-mongodb
  namespace: hyperdx
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
    app.kubernetes.io/instance: hyperdx
    app.kubernetes.io/name: hdx-oss-v2
