k3s/generated_manifests/hyperdx/IngressRoute-hyperdx.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hyperdx
  namespace: hyperdx
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hyperdx.doma.lol`)
      services:
        - name: hyperdx-hdx-oss-v2-app
          port: 3000
